--- a/style/backup.css
+++ b/style/backup.css
@@ -88,6 +88,7 @@ p {
     background-size: 80%;
     animation: animate 10s ease-in infinite;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
     }
 
@@ -106,6 +107,7 @@ p {
     background-size: 80%;
     animation: animate 10s ease-out infinite;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
     }
         
@@ -194,9 +196,15 @@ contact-info,.contact-email,.footer-text{
 }
 
 .about-img{
-
     padding: 1rem 1rem;
+   
 }
+
+.about-img:hover {
+    transform: rotate(15deg) scale(1.2);
+    transition: .4s ease-in-out;
+    }
+
 
 .about-text{
     max-width: 30rem;
@@ -227,6 +235,7 @@ contact-info,.contact-email,.footer-text{
 
 .experience-boxes{
     padding-top: 2rem;
+    text-align: center;
     /* display: flex;
     justify-content: space-around;
     flex-wrap: wrap; */
@@ -363,6 +372,7 @@ contact-info,.contact-email,.footer-text{
 .footer-container{
     padding: 0.4rem;
     background-color:#dea363;
+    color: black;
     display: flex;
     justify-content:left;
     align-items: center;
@@ -379,7 +389,6 @@ contact-info,.contact-email,.footer-text{
 
 .footer-text{
     width:20%;
-    color: black;
     text-align: left;
 }
 
