--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -13,6 +13,10 @@
         .social-icons:hover {
             transform: scale(1.2);
             }
+        @media screen and (max-width:500px) {
+                transform: scale(0.9, 0.9);
+                gap: 1rem;
+        }
     }
     .footer-text{
         width:20%;
