--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -51,12 +51,16 @@
 
     .home-social {
         @include display-flex(flex, center, center, none);
+        padding-top: 3rem;
         gap: 1rem;
-        transform: scale(0.5, 0.5);
+        transform: scale(0.6, 0.6);
         transition: transform .2s;
 
         .social-icons:hover {
             transform: scale(1.2);
+        }
+        @media screen and (max-width:500px) {
+            transform: scale(0.9, 0.9);
         }
     }
 
