--- a/scss/components/_home.scss
+++ b/scss/components/_home.scss
@@ -61,6 +61,7 @@
         }
         @media screen and (max-width:500px) {
             transform: scale(0.9, 0.9);
+            gap: 0.2rem;
         }
     }
 
