--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -10,11 +10,15 @@
         padding: 3rem 0rem;
         @include display-flex(flex, space-evenly, none, wrap);
       .form-container{
+        background-color: nth($colores,4);
+        border-radius: 1rem;
         border-style:solid;
         border-width: 1px;
         border-color: nth($colores,1);
         padding: 0.4rem;
         .form-details{
+            text-transform: uppercase;
+            letter-spacing: 2px;
             padding-top: 0.7rem;
             padding-bottom: 1rem;
             padding-left: 0.4rem;
@@ -26,6 +30,19 @@
             .form-input1{
                 width: 17rem;
                 height: 10rem;
+            }
+            .boton{
+                display: inline-block;
+                background-image: linear-gradient(125deg, nth($colores,1),nth($colores,5));
+                color: nth($colores,3);
+                text-transform: uppercase;
+                letter-spacing: 2px;
+                font-size: 0.7rem;
+                padding: 0.3rem 0.5rem;
+                margin-left: 3rem;
+                border: none;
+                width: 200px;
+                cursor: pointer;
             }
 
         }
