--- a/scss/components/_experience.scss
+++ b/scss/components/_experience.scss
@@ -38,6 +38,7 @@
         padding: 0rem;
 
         .experience-box {
+            min-height: max-content;
             text-align: center;
             padding: 1rem 2rem;
             border-radius: 2rem;
