--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,8 @@ contact-info, .contact-email, .footer-text {
   transition: 1s ease;
 }
 .aboutUs-container .about-text {
-  max-width: 30rem;
+  max-width: 35rem;
+  line-height: 1.6rem;
 }
 
 /* -----===== SKILLS ======----- */
@@ -368,14 +369,15 @@ contact-info, .contact-email, .footer-text {
   flex-wrap: wrap;
 }
 .contactUs-container .contactUs-nav .form-container {
-  background-color: #dea363;
+  background-color: #051622;
   border-radius: 1rem;
   border-style: solid;
   border-width: 1px;
-  border-color: #DEB992;
+  border-color: #051622;
   padding: 0.4rem;
 }
 .contactUs-container .contactUs-nav .form-container .form-details {
+  color: #F49A5D;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding-top: 0.7rem;
@@ -391,18 +393,30 @@ contact-info, .contact-email, .footer-text {
   width: 17rem;
   height: 10rem;
 }
+.contactUs-container .contactUs-nav .form-container .form-details .form-input:focus {
+  outline: none;
+  border: 3px solid #F49A5D;
+}
+.contactUs-container .contactUs-nav .form-container .form-details .form-input1:focus {
+  outline: none;
+  border: 3px solid #F49A5D;
+}
 .contactUs-container .contactUs-nav .form-container .form-details .boton {
   display: inline-block;
-  background-image: linear-gradient(125deg, #DEB992, #051622);
-  color: #ece3db;
+  background-image: linear-gradient(125deg, #DEB992, #F49A5D);
+  color: #000000;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 0.7rem;
-  padding: 0.3rem 0.5rem;
+  padding: 0.4rem 0.5rem;
   margin-left: 3rem;
   border: none;
   width: 200px;
   cursor: pointer;
+}
+.contactUs-container .contactUs-nav .form-container .form-details .boton:hover {
+  font-weight: bolder;
+  box-shadow: 0 0 10px #ece3db;
 }
 .contactUs-container .contactUS-address {
   padding: 1rem;
