--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -1,6 +1,29 @@
 /* -----===== PORTFOLIO ======----- */
 
 .portfolio-container{
+    .hx-heading {
+        background: 50% 100% / 50% 50% no-repeat
+                    radial-gradient(ellipse at bottom, nth($colores,5), transparent, transparent);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+        animation: reveal 3000ms ease-in-out forwards 200ms,
+                   glow 2500ms linear infinite 2000ms;
+      
+        @keyframes reveal {
+          80%{
+            letter-spacing: 8px;
+          }
+          100% {
+            background-size: 300% 300%;
+          }
+        }
+        @keyframes glow {
+          40% {
+            text-shadow: 0 0 8px nth($colores,5);
+          }
+        }
+      }  
     @include style-containers(7rem 5rem, nth($colores,1), nth($colores,5));
     @media screen and (max-width:500px) {
         padding: 3rem 2rem;
