--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,27 @@ contact-info, .contact-email, .footer-text {
   font-size: 0.8rem;
 }
 
+.contactUs-container .hx-heading, .portfolio-container .hx-heading, .experience-container .hx-heading, .skills-container .hx-heading, .aboutUs-container .about-text .hx-heading {
+  background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #051622, transparent, transparent);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
+}
+@keyframes reveal {
+  80% {
+    letter-spacing: 8px;
+  }
+  100% {
+    background-size: 300% 300%;
+  }
+}
+@keyframes glow {
+  40% {
+    text-shadow: 0 0 8px #051622;
+  }
+}
+
 /* -----===== HEADER ======----- */
 .header-container {
   padding: 0.2rem 0.2rem;
@@ -206,27 +227,6 @@ contact-info, .contact-email, .footer-text {
   max-width: 35rem;
   line-height: 1.6rem;
 }
-.aboutUs-container .about-text .hx-heading {
-  background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #051622, transparent, transparent);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
-}
-@keyframes reveal {
-  80% {
-    letter-spacing: 8px;
-  }
-  100% {
-    background-size: 300% 300%;
-  }
-}
-@keyframes glow {
-  40% {
-    text-shadow: 0 0 8px #051622;
-  }
-}
-
 /* -----===== SKILLS ======----- */
 .skills-container {
   padding: 7rem 5rem;
@@ -236,26 +236,6 @@ contact-info, .contact-email, .footer-text {
 @media screen and (max-width: 500px) {
   .skills-container {
     padding: 3rem 2rem;
-  }
-}
-.skills-container .hx-heading {
-  background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #051622, transparent, transparent);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
-}
-@keyframes reveal {
-  80% {
-    letter-spacing: 8px;
-  }
-  100% {
-    background-size: 300% 300%;
-  }
-}
-@keyframes glow {
-  40% {
-    text-shadow: 0 0 8px #051622;
   }
 }
 .skills-container .tech-list {
@@ -311,26 +291,6 @@ contact-info, .contact-email, .footer-text {
   background-color: #ece3db;
   color: #051622;
 }
-.experience-container .hx-heading {
-  background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #051622, transparent, transparent);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
-}
-@keyframes reveal {
-  80% {
-    letter-spacing: 8px;
-  }
-  100% {
-    background-size: 300% 300%;
-  }
-}
-@keyframes glow {
-  40% {
-    text-shadow: 0 0 8px #051622;
-  }
-}
 @media screen and (max-width: 500px) {
   .experience-container {
     padding: 3rem 2rem;
@@ -383,26 +343,6 @@ contact-info, .contact-email, .footer-text {
   padding: 7rem 5rem;
   background-color: #DEB992;
   color: #051622;
-}
-.portfolio-container .hx-heading {
-  background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #051622, transparent, transparent);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
-}
-@keyframes reveal {
-  80% {
-    letter-spacing: 8px;
-  }
-  100% {
-    background-size: 300% 300%;
-  }
-}
-@keyframes glow {
-  40% {
-    text-shadow: 0 0 8px #051622;
-  }
 }
 @media screen and (max-width: 500px) {
   .portfolio-container {
@@ -473,26 +413,6 @@ contact-info, .contact-email, .footer-text {
   background-color: #ece3db;
   color: #051622;
 }
-.contactUs-container .hx-heading {
-  background: 50% 100%/50% 50% no-repeat radial-gradient(ellipse at bottom, #051622, transparent, transparent);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  animation: reveal 3000ms ease-in-out forwards 200ms, glow 2500ms linear infinite 2000ms;
-}
-@keyframes reveal {
-  80% {
-    letter-spacing: 8px;
-  }
-  100% {
-    background-size: 300% 300%;
-  }
-}
-@keyframes glow {
-  40% {
-    text-shadow: 0 0 8px #051622;
-  }
-}
 @media screen and (max-width: 500px) {
   .contactUs-container {
     padding: 3rem 2rem;
@@ -511,14 +431,14 @@ contact-info, .contact-email, .footer-text {
   border-style: solid;
   border-width: 1px;
   border-color: #051622;
-  padding: 0.4rem;
+  padding: 0.5rem 0rem;
 }
 .contactUs-container .contactUs-nav .form-container .form-details {
   color: #F49A5D;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding-top: 0.7rem;
-  padding-bottom: 1rem;
+  padding-bottom: 0rem;
   padding-left: 0.4rem;
   padding-right: 0.4rem;
 }
@@ -546,7 +466,11 @@ contact-info, .contact-email, .footer-text {
   letter-spacing: 2px;
   font-size: 0.7rem;
   padding: 0.4rem 0.5rem;
-  margin-left: 3rem;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   border: none;
   width: 200px;
   cursor: pointer;
