--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import './base/generalSettings';
 @import './base/lists';
 @import './base/mixin';
+@import './base/extend';
 @import './components/header';
 @import './components/home';
 @import './components/phrase';
