--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,138 @@ p {
   line-height: 1.5em;
 }
 
+////////////////
+
+
+.t-heading {
+  font-family: "Cinzel", serif;
+  font-size: 1.2rem;
+  line-height: 1.5em;
+}
+
+table {
+  table-layout: fixed;
+  width: 80%;
+  border-collapse: collapse;
+  border: 3px solid #051622;
+}
+
+thead th:nth-child(1) {
+  width: 30%;
+}
+
+thead th:nth-child(2) {
+  width: 20%;
+}
+
+thead th:nth-child(3) {
+  width: 15%;
+}
+
+thead th:nth-child(4) {
+  width: 35%;
+}
+
+th {
+  background-color: #051622;
+  color: white;
+}
+
+th, td {
+  padding: 5px;
+  border-bottom: 0.5px solid #051622;
+  text-align: center;
+  }
+
+
+/* tr:nth-child(even) {background-color: #F49A5D;} */
+tr:hover {background-color: #F49A5D;}
+
+
+
+.boton2 {
+  background-image: linear-gradient(125deg, #DEB992, #F49A5D);
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 0.7rem;
+  padding: 0.4rem 0.5rem;
+
+
+  border: none;
+  width: 200px;
+  cursor: pointer;
+}
+
+.boton2:hover {
+  font-weight: bolder;
+  box-shadow: 0 0 10px #ece3db;
+}
+
+.body2 {
+  padding: 2rem 5rem;
+  background-color: #DEB992;
+  color: #051622;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  background:  #051622;
+  background-image: none;
+  /* border: 1px solid black; */
+}
+
+.select {
+  position: relative;
+  display: block;
+  width: 20em;
+  height: 3em;
+  line-height: 3;
+  background:#DEB992;
+  overflow: hidden;
+  border-radius: .25em;
+}
+
+select {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0 0 0 .5em;
+  color: #fff;
+  cursor: pointer;
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+.select::after {
+  content: '\25BC';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0 1em;
+  background: #DEB992;
+  pointer-events: none;
+}
+
+.select:hover::after {
+  color: #F39C12;
+}
+
+.select::after {
+  -webkit-transition: .25s all ease;
+  -o-transition: .25s all ease;
+  transition: .25s all ease;
+}
+//////////////////
+
+
 .h2-heading {
   font-family: "Cinzel", serif;
   font-size: 1.2rem;
